[package]
name = "ea-command"
version = "0.1.0"
license = "MIT"
authors = ["Daniel Duan <daniel@duan.ca>"]
edition = "2018"
description = "Editor Alias: making paths in command line tools actionable."
documentation = "https://github.com/dduan/ea/blob/master/README.md"
exclude = ["/.github/*", "demo.gif", "flake.nix", "flake.lock", "/scripts/*", "/resources/*"]
readme = "README.md"
homepage = "https://github.com/dduan/ea"
repository = "https://github.com/dduan/ea"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
atty = '0.2.14'
bincode = '1.3.3'
clap = { version = "3.1.8", features = ["derive"] }
lazy_static = '1.4'
pty = '0.2'
regex = '1'
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "ea"
path = "src/main.rs"
