[package]
name = "ea-command"
version = "0.2.0"
license = "MIT"
authors = ["Daniel Duan <daniel@duan.ca>"]
edition = "2018"
description = "Editor Alias: making paths in command line tools actionable."
documentation = "https://github.com/dduan/ea/blob/master/README.md"
exclude = ["/.github/*", "demo.gif", "flake.nix", "flake.lock", "/scripts/*", "/resources/*", "src/bin/printfile.rs"]
readme = "README.md"
homepage = "https://github.com/dduan/ea"
repository = "https://github.com/dduan/ea"
keywords = ["cli"]
categories = ["command-line-utilities"]
default-run = "ea"

[dependencies]
atty = '0.2.14'
bincode = '1.3.3'
clap = { version = "3.1.8", features = ["derive"] }
lazy_static = '1.4'
pty = '0.2'
regex = '1'
serde = { version = "1.0", features = ["derive"] }
guard = '0.5.1'

[build-dependencies]
clap = { version = "3.1.8", features = ["cargo"] }
clap_complete = "3.1"

[dev-dependencies]
assert_cmd = "2.0"
pty = '0.2'
